I added chocolate milk

--- a/grocerty.html
+++ b/grocerty.html
@@ -1,7 +1,7 @@
 <ul>
 	<li>Apples </li>
 	<li>Bananas </li>
-	<li>Milk </li>
+	<li>Chocolate Milk </li>
 	<li>Vegetables </li>
 	<li>Chocolate </li>
 	<li>Cake </li>
